3.8.0/_sources/plugins/content_view_version_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.redhat.satellite.content_view_version_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

redhat.satellite.content_view_version module -- Manage Content View Versions
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `redhat.satellite collection <https://galaxy.ansible.com/redhat/satellite>`_ (version 3.8.0).

    To install it, use: :code:`ansible-galaxy collection install redhat.satellite`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.redhat.satellite.content_view_version_module_requirements>` for details.

    To use it in a playbook, specify: :code:`redhat.satellite.content_view_version`.

.. version_added

.. rst-class:: ansible-version-added

New in redhat.satellite 1.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Publish, Promote or Remove a Content View Version


.. Aliases


.. Requirements

.. _ansible_collections.redhat.satellite.content_view_version_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- requests






.. Options

Parameters
----------


.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-content_view"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-content_view:

      .. rst-class:: ansible-option-title

      **content_view**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-content_view" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Name of the content view


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-current_lifecycle_environment"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-current_lifecycle_environment:

      .. rst-class:: ansible-option-title

      **current_lifecycle_environment**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-current_lifecycle_environment" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The lifecycle environment that is already associated with the content view version

      Helpful for promoting a content view version


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-description"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-description:

      .. rst-class:: ansible-option-title

      **description**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-description" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Description of the Content View Version


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-force_promote"></div>
        <div class="ansibleOptionAnchor" id="parameter-force"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-force:
      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-force_promote:

      .. rst-class:: ansible-option-title

      **force_promote**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-force_promote" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: force`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Force content view promotion and bypass lifecycle environment restriction


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-force_yum_metadata_regeneration"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-force_yum_metadata_regeneration:

      .. rst-class:: ansible-option-title

      **force_yum_metadata_regeneration**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-force_yum_metadata_regeneration" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Force metadata regeneration when performing Publish and Promote tasks


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-lifecycle_environments"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-lifecycle_environments:

      .. rst-class:: ansible-option-title

      **lifecycle_environments**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-lifecycle_environments" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The lifecycle environments the Content View Version should be in.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-organization"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-organization:

      .. rst-class:: ansible-option-title

      **organization**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-organization" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Organization that the entity is in


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-password"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-password:

      .. rst-class:: ansible-option-title

      **password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Password of the user accessing the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_PASSWORD`\  will be used instead.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-server_url"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-server_url:

      .. rst-class:: ansible-option-title

      **server_url**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-server_url" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      URL of the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_SERVER\_URL`\  will be used instead.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-state"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-state:

      .. rst-class:: ansible-option-title

      **state**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-state" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      State of the entity


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`"present"` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`"absent"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-username"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-username:

      .. rst-class:: ansible-option-title

      **username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Username accessing the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_USERNAME`\  will be used instead.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_certs"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-validate_certs:

      .. rst-class:: ansible-option-title

      **validate_certs**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_certs" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Whether or not to verify the TLS certificates of the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_VALIDATE\_CERTS`\  will be used instead.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-version"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__parameter-version:

      .. rst-class:: ansible-option-title

      **version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The content view version number (i.e. 1.0)


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - You cannot use this to remove a Content View Version from a Lifecycle environment, you should promote another version first.
   - For idempotency you must specify either \ :literal:`version`\  or \ :literal:`current\_lifecycle\_environment`\ .

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: "Ensure content view version 2.0 is in Test & Pre Prod"
      redhat.satellite.content_view_version:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        content_view: "CV 1"
        organization: "Default Organization"
        version: "2.0"
        lifecycle_environments:
          - Test
          - Pre Prod

    - name: "Ensure content view version in Test is also in Pre Prod"
      redhat.satellite.content_view_version:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        content_view: "CV 1"
        organization: "Default Organization"
        current_lifecycle_environment: Test
        lifecycle_environments:
          - Pre Prod

    - name: "Publish a content view, not idempotent"
      redhat.satellite.content_view_version:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        content_view: "CV 1"
        organization: "Default Organization"

    - name: "Publish a content view and promote that version to Library & Dev, not idempotent"
      redhat.satellite.content_view_version:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        content_view: "CV 1"
        organization: "Default Organization"
        lifecycle_environments:
          - Library
          - Dev

    - name: "Ensure content view version 1.0 doesn't exist"
      redhat.satellite.content_view_version:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        content_view: "Web Servers"
        organization: "Default Organization"
        version: "1.0"
        state: absent

    # Obtain information about a Content View and its versions
    - name: find all CVs
      redhat.satellite.resource_info:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        organization: "Default Organization"
        resource: content_views
        search: 'name="Example Content"'
      register: example_content

    # Obtain more details about all versions of a specific Content View
    - name: "find content view versions of {{ cv_id }}"
      redhat.satellite.resource_info:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        organization: "Default Organization"
        resource: content_view_versions
        params:
          content_view_id: "{{ example_content.resources[0].id }}"
      register: version_information




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-entity"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__return-entity:

      .. rst-class:: ansible-option-title

      **entity**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-entity" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Final state of the affected entities grouped by their type.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>

    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-entity/content_view_versions"></div>

      .. _ansible_collections.redhat.satellite.content_view_version_module__return-entity/content_view_versions:

      .. rst-class:: ansible-option-title

      **content_view_versions**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-entity/content_view_versions" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of content view versions.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>




..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Sean O'Keeffe (@sean797)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://bugzilla.redhat.com" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://access.redhat.com/products/red-hat-satellite" aria-role="button" target="_blank" rel="noopener external">Homepage</a>
    <a href="https://github.com/RedHatSatellite/satellite-ansible-collection" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

